Styling on tablet & mobile, bug fixing

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -5,6 +5,7 @@ html, body {
 
 body {
   font-family: sans-serif;
+  font-size: 1em;
   background-color: #fafafa;
   color: #fafafa;
   min-width: 220px;
@@ -18,35 +19,40 @@ header {
 }
 
 header img {
-  height: 6vw;
-  padding: 1vw;
+  height: 4em;
+  padding: 0.5em;
 }
 
 h1 {
-  font-size: 4vw;
+  font-size: 3em;
   margin: 0;
+}
+
+h2 {
+  font-size: 1.2em;
 }
 
 nav {
   height: auto;
+  min-height: 3em;
   background-color: #42a5f5;
 }
 
 nav ul {
   height: auto;
   margin: 0;
-  padding: 1vw;
+  padding: 0.5em;
   list-style: none;
 }
 
 nav li {
   height: auto;
   display: inline;
-  padding-right: 1vw;
+  padding-right: 1em;
 }
 
 nav a {
-  font-size: 2vw;
+  font-size: 1.2em;
   color: #fafafa;
   text-decoration: none;
 }
@@ -55,8 +61,13 @@ nav a:hover, nav .active {
   color: #dadada;
 }
 
+nav button {
+  display: none;
+  position: absolute;
+}
+
 main {
-  padding: 0.5vw;
+  padding: 0.5em;
 }
 
 main .row {
@@ -65,14 +76,14 @@ main .row {
 }
 
 main .col {
-    flex: 1 1 4vw;
+    flex: 1 1 1em;
     background: #dadada;
-    padding: 1vw;
-    margin: 0.5vw;
+    padding: 0.5em;
+    margin: 0.5em;
 }
 
 main .slider-container {
-  height: 35vh;
+  height: 20em;
   position: relative;
 }
 
@@ -85,7 +96,7 @@ main .slider-image {
 main .slider-image img {
   box-sizing: border-box;
   animation-name: fade-image;
-  animation-duration: 1.5s;
+  animation-duration: 0.5s;
   margin: auto;
   width: auto;
   max-width: 100%;
@@ -95,10 +106,6 @@ main .slider-image img {
 main .slider-container button {
   position: absolute;
   top: 50%;
-  border: none;
-  color: #fafafa;
-  background: none;
-  text-decoration: none;
 }
 
 main .slider-container button:hover {
@@ -116,42 +123,39 @@ main .col-filler {
 }
 
 .col-filler .col {
-  flex: 1 1 calc(50% - 3vw);
+  flex: 1 1 calc(50% - 2em);
   display: flex;
-  padding: 1vw;
-  margin: 0.5vw;
+  padding: 0.5em;
+  margin: 0.5em;
+}
+
+.col-filler .content h2 {
+  margin: 0;
 }
 
 .col-filler .col > span {
-  flex: 1 1 auto
-}
-
-.col-filler .zoomed {
-  flex: 1 1 calc(100% - 3vw);
-  display: flex;
-  padding: 1vw;
-  margin: 0.5vw;
-}
-
-.col-filler .zoomed > span {
-  flex: 1 1 auto
+  flex: 1 1 auto;
 }
 
 .col-filler button {
-  border: none;
   color: #fafafa;
   background: none;
   text-decoration: none;
-  height: 20px;
 }
 
 .col-filler .content span:not(.preview):not(.show), .col-filler .content img:not(.preview):not(.show) {
   display: none;
 }
 
+.col-filler .content img {
+  margin: 0.5em;
+  max-width: 100%;
+}
+
 main .video {
-  height: 35vh;
+  min-height: 40em;
   position: relative;
+  text-align: center;
 }
 
 main .video-container {
@@ -162,8 +166,6 @@ main .video-container {
 
 main .video-container img {
   box-sizing: border-box;
-  animation-name: fade-image;
-  animation-duration: 1.5s;
   margin: auto;
   width: auto;
   max-width: 100%;
@@ -171,18 +173,99 @@ main .video-container img {
 }
 
 footer {
-  font-size: 2vw;
-  padding: 1vw;
-  width: calc(100% - 2vw);
+  padding: 0.5em;
+  width: calc(100% - 1em);
   text-align: center;
   background-color: #80d6ff;
 }
 
+button {
+  width: 3em;
+  height: 3em;
+  border: none;
+  border-radius: 50%;
+  background: none;
+  text-decoration: none;
+  outline: none;
+}
+
+button:hover {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+@media screen and (max-width: 1024px) {
+  nav ul {
+    flex: 1 1 auto;
+    display: flex;
+  }
+
+  nav ul li {
+    flex: 1 1 auto;
+    border: none;
+    text-align: center;
+  }
+
+  main {
+    padding: 0;
+  }
+
+  main .row {
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+  }
+
+  main .row .col {
+    margin: 0;
+    margin-top: 0.5em;
+  }
+
+  main .row:last-child {
+    margin-bottom: 0.5em;
+  }
+
+  .col-filler .col {
+    flex: 1 1 100%;
+    display: flex;
+    padding: 0.5em;
+    margin: 0.5em;
+  }
+
+  .col-filler .content img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  nav ul {
+    flex-direction: column;
+  }
+
+  nav ul li {
+    padding: 0.5em;
+  }
+
+  nav button {
+    display: block;
+  }
+
+  main .col {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .col-filler .content img {
+    width: 100%;
+  }
+}
+
 @keyframes fade-image {
   from {
-    opacity: 0.5
+    opacity: 0.2;
   }
   to {
-    opacity: 1
+    opacity: 1;
   }
 }
